error de estilos y js arreglado para todas las view

--- a/Proyecto Grupo 6/Proyecto Grupo 6.csproj
+++ b/Proyecto Grupo 6/Proyecto Grupo 6.csproj
@@ -285,6 +285,7 @@
     <Content Include="WebItems\sass\_sidebar.scss" />
     <Content Include="WebItems\sass\_variable.scss" />
     <Content Include="Views\Store\index.cshtml" />
+    <Content Include="Views\Store\Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
