se agrega la pantalla de contacto y se arregla el layout
Parte de Ariel lista

--- a/Proyecto Grupo 6/Proyecto Grupo 6.csproj
+++ b/Proyecto Grupo 6/Proyecto Grupo 6.csproj
@@ -162,6 +162,7 @@
     <Content Include="WebItems\css\style.css" />
     <Content Include="WebItems\fonts\ElegantIcons.svg" />
     <Content Include="WebItems\fonts\fontawesome-webfont.svg" />
+    <Content Include="WebItems\img\banner.JPG" />
     <Content Include="WebItems\img\banner\banner-1.jpg" />
     <Content Include="WebItems\img\banner\banner-2.jpg" />
     <Content Include="WebItems\img\blog\blog-1.jpg" />
