--- a/API Proyecto Grupo 6/API Proyecto Grupo 6/Web.config
+++ b/API Proyecto Grupo 6/API Proyecto Grupo 6/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="PasswordEmail" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -77,4 +78,4 @@
 	<!--este es el nombre de la base de datos, cambiar el connection string para la de cada uno-->
 	
 
-<connectionStrings><add name="ProyectoPrograEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-82180HC\SQLEXPRESS;initial catalog=ProyectoProgra;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ProyectoPrograEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=ProyectoProgra;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
