--- a/API Proyecto Grupo 6/API Proyecto Grupo 6/API Proyecto Grupo 6.csproj
+++ b/API Proyecto Grupo 6/API Proyecto Grupo 6/API Proyecto Grupo 6.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Models\User.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UtilitariosModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -289,6 +290,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\UtilitariosModel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
