--- a/Proyecto Grupo 6/Proyecto Grupo 6.csproj
+++ b/Proyecto Grupo 6/Proyecto Grupo 6.csproj
@@ -356,6 +356,7 @@
     <Content Include="Views\Store\ActualizarArticulo.cshtml" />
     <Content Include="Views\Store\FormularioArticuloActualizar.cshtml" />
     <Content Include="Views\Store\FormularioConfirmarAgregarAlCarrito.cshtml" />
+    <Content Include="Views\Store\Recuperar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
